--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply font-bold text-3xl;
+  }
+
+  a {
+    @apply underline font-bold;
+  }
+}
